Added enum for user type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework.security=INFO
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=Admin
