--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework.security=INFO
 spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=Admin
+spring.jpa.properties.hibernate.show_sql=true
+appName.allowedApi=http://localhost:3000
